# Noetix-Agent

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
agent/: __init__.py  config.py  core.py  loop.py  memory.py  subagents.py  toolregistry.py
config/: config.example.yaml
cron/: scheduler.py
gateway/: server.py
skills/: builtin_skills.py
tools/: coding_tools.py  core_tools.py  security_tools.py
